--- a/adas-pizza-2/package.json
+++ b/adas-pizza-2/package.json
@@ -4,7 +4,9 @@
   "description": "Ada's Pizza Express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "mvc",
@@ -12,5 +14,9 @@
     "express"
   ],
   "author": "wdi-nyc-ada",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
+  }
 }
