--- a/adas-pizza-2/package.json
+++ b/adas-pizza-2/package.json
@@ -16,6 +16,7 @@
   "author": "wdi-nyc-ada",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "morgan": "^1.8.1"
