--- a/adas-pizza-2/package.json
+++ b/adas-pizza-2/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "pg-promise": "^5.6.7"
   }
 }
